<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".activities.WorkerRegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="305dp"
                    android:scaleType="fitXY"
                    app:srcCompat="@drawable/top_background2" />

                <ImageView
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="40dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/logo_white_removebg_preview"/>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/RegisterTitle"
                android:layout_marginStart="25dp"
                android:textAlignment="center"
                android:textColor="@color/secondaryTitle"
                android:textSize="40dp"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/etWName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/round_corners"
                android:drawableStart="@drawable/name"
                android:drawablePadding="10dp"
                android:hint="@string/userName"
                android:padding="10dp">

            </EditText>

            <EditText
                android:id="@+id/etWEmail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_margin="20dp"
                android:background="@drawable/round_corners"
                android:drawableStart="@drawable/email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:padding="10dp">

            </EditText>

            <EditText
                android:id="@+id/etWPhone"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/round_corners"
                android:drawableStart="@drawable/phone"
                android:drawablePadding="10dp"
                android:hint="@string/enter_your_phone_number"
                android:padding="10dp">

            </EditText>

            <EditText
                android:id="@+id/etWDistrict"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_corners"
                android:drawableStart="@drawable/location"
                android:drawablePadding="10dp"
                android:hint="@string/district"
                android:padding="10dp"></EditText>

            <EditText
                android:id="@+id/etWDescription"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_corners"
                android:drawableStart="@drawable/description"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:hint="@string/description"
                android:inputType="text|textMultiLine"
                android:padding="10dp"></EditText>

            <EditText
                android:id="@+id/etWPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_corners"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="10dp"></EditText>

            <EditText
                android:id="@+id/etWRePassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_corners"
                android:drawableStart="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/re_enter_the_password"
                android:inputType="textPassword"
                android:padding="10dp"></EditText>



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/workerRegBtn"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="10dp"
                    app:srcCompat="@drawable/btn_arraw1" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/progressstatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_vertical|right"
                    android:text="@string/haveAccountText"
                    android:textColor="@color/normalText" />

                <TextView
                    android:id="@+id/tvWorkerSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/SignIn"
                    android:textColor="@color/linkText" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>




</LinearLayout>