<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="50dp"
        tools:context=".WorkerLoginActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="305dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/top_background1" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:src="@drawable/logo_white_removebg_preview" />
        </RelativeLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="25dp"
            android:text="@string/anyjob"
            android:textStyle="bold"
            android:textColor="@color/darkTitle"
            android:textSize="40dp">        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="25dp"
            android:text="@string/anytime"
            android:textStyle="bold"
            android:textColor="@color/darkTitle"
            android:textSize="40dp">        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginStart="25dp"
            android:text="@string/anywhere"
            android:textStyle="bold"
            android:textColor="@color/darkTitle"
            android:textSize="40dp">        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/hireBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="@color/primaryBtnColor"
                android:text="@string/iwanttohire"
                android:textColor="#FFF"
                android:textSize="23sp"
                app:cornerRadius="30dp"></Button>

            <Button
                android:id="@+id/workBtn"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#FFF"
                android:text="@string/iwanttowork"
                android:textColor="#6672FF"
                android:textSize="23sp"
                app:cornerRadius="30dp"></Button>


        </LinearLayout>


    </LinearLayout>
</ScrollView>