<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/background">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    tools:context=".activities.WorkerResetPasswordActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="305dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/top_background1" />

        <ImageView
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:src="@drawable/logo_white_removebg_preview" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:text="@string/resetpass"
        android:textAlignment="center"
        android:textColor="@color/secondaryTitle"
        android:textSize="40dp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/etWorkerResetEmail"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="20dp"
        android:background="@drawable/round_corners"
        android:drawableStart="@drawable/email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:padding="10dp"></EditText>

    <EditText
        android:id="@+id/etWorkerResetPassword"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:drawableStart="@drawable/password"

        android:background="@drawable/round_corners"
        android:drawablePadding="10dp"
        android:hint="@string/enter_a_new_password"
        android:padding="10dp"></EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivWorkerResetPasswordBtn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/btn_arraw1" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:text="@string/log_in_instead"
            android:textColor="@color/normalText" />

        <TextView
            android:id="@+id/tvWorkerSignInInsteadLink"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/SignIn"
            android:textColor="@color/linkText" />
    </LinearLayout>

</LinearLayout>
</ScrollView>